# Bot-buscador-de-atos-publicados

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  agente.py  ai_processor.py  analise_db.py  atos_arquivo.py  auth_middleware.py  ciclo  config.py  console_ui.py  database.py  detector.py  docker-compose.yml  downloader.py  exporter.py  google-dork-generator.html  iniciar.bat  iniciar_interface.bat  iniciar_tudo.py  inteligencia.py  interface.bat  jornal_monitor.db-journal  jornal_monitor.db-shm  jornal_monitor.db-wal  main.py  notifier.py  ocr_processor.py  pipeline.py  polling  process_lock.py  pyproject.toml  qualidade.py  qualidade_gap.py  requirements.txt  run_interface.py  (+3 more)
.github/workflows/: ci.yml  docker-publish.yml
.omo/run-continuation/: ses_0d6ec8610ffeOUirIoBS30kuth.json
agent-tools/: a715980b-0f4c-487c-97da-448b6fa2de3d.txt
docs/: design-qualidade-5-funcoes.md
ocr/: __init__.py  cache.py  column_detection.py  cpu_workers.py  extractor.py  models.py  preprocessing.py  tesseract.py
scripts/: README.md  _agente.py  _audit_deteccao.py  _auditoria_completa.py  _buscar_publicacoes.py  _diagnostico.py  _espaco_disco.py  _exportar_mes.py  _header_status.py  _ia_status.py  _invalidar_ocr.py  _limpar_jobs.py  _limpar_processados.py  _limpeza_disco.py  _listar_mencoes.py  _listar_mencoes_julho.py  _menu_cli.py  _processar_id.py  _processar_julho_2026.py  _processar_mes.py  _processar_pendentes.py  _qualidade.py  _re_ia.py  _remover_lock.py  _resumo_mensal.py  _scrape_only.py  _settings_cli.py  _status_fila.py  _status_julho.py  _status_qualidade.py  _ultimas_publicacoes.py  analyze_187.py  analyze_june.py  analyze_may.py  backup_db.py  check_status.py  count_edicoes.py  count_ia.py  count_processed.py  final_june_status.py  (+20 more)
static/: admin.js  app.js  base.css  busca.js  components.css  layout.css  markdown.js  operacao.js  styles.css  utils.css
templates/: admin.html  base.html  dashboard.html  detecoes.html  edicao.html  edicoes_detectadas.html  exportar.html  inteligencia.html  notificacoes.html  operacao.html  perguntar.html  so_mencao.html  status.html
terminals/: 1.txt  2.txt  3.txt  4.txt  5.txt
tests/: conftest.py  test_admin_gate.py  test_agente.py  test_ai_processor.py  test_atos_arquivo.py  test_auth_middleware.py  test_console_ui.py  test_cpu_workers.py  test_database.py  test_detector.py  test_exporter.py  test_inteligencia.py  test_menu_cli.py  test_notifier.py  test_ocr_cache.py  test_ocr_processor.py  test_pipeline.py  test_process_lock.py  test_qualidade_confianca.py  test_qualidade_gap.py  test_qualidade_numero.py  test_qualidade_re_ia.py  test_scraper.py  test_valor_ancora.py  test_webapp.py
