[project]
name = "monitor-de-atos-bot"
version = "0.1.0"
description = "Monitor automático de edições do O Regional Jornal para detecção de atos oficiais de Inajá-PR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>=1.24.0",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.4",
    "pillow>=10.4.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ocr", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]
