[project]
name = "bot-buscador-de-atos-publicados"
version = "1.1.0"
description = "Monitor de edições do O Regional Jornal com OCR e detecção de atos de Inajá-PR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Monitor de Atos" }]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>=1.24.0",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.4",
    "pillow>=10.4.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
monitor-atos = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "edicoes",
    "logs",
    "alertas",
    "__pycache__",
    "scripts",
    "terminals",
    "agent-tools",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "W",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["ocr", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E402"]
"scripts/*" = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]
